namespace AsteroidsEngine
{
    public abstract class UpdateComponent
    {
        public abstract void Update(Entity entity, float delta);
    }
}